--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,41 @@
   "name": "hackernews-node",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "generate": "graphql-codegen --config codegen.ts",
+    "compile": "yarn run generate && tsc && tsc-alias",
+    "start": "yarn run compile && node ./dist/index.js",
+    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "watch": "concurrently  --names \"CodeGen,TS,Nodemon\" -c \"bgYellow,bgBlue,bgMagenta\" \"graphql-codegen --watch 'src/**/*.ts'\"  \"tsc -w \" \"tsc-alias -w\" \"nodemon --ignore 'src/__generated__*.ts' ./dist/index.js \"",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.4",
+    "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "^5.2.0",
-    "apollo-server": "^2.19.0",
     "bcryptjs": "2.4.3",
-    "jsonwebtoken": "8.5.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.1",
+    "jsonwebtoken": "8.5.1",
+    "typescript": "^5.2.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-resolvers": "4.0.1",
+    "@types/bcryptjs": "^2.4.4",
+    "@types/cors": "^2.8.14",
+    "@types/jsonwebtoken": "^9.0.3",
+    "concurrently": "^8.2.1",
     "nodemon": "^2.0.6",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.8"
   }
 }
